--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 
 
 #cabecera{
-    background: url("../imagenes/dragon.webp") no-repeat center center;
+    /* background: url("../imagenes/dragon.webp") no-repeat center center; */
     box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.75);
     color: white;
     font-weight: bold;
