--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
 
 #cabecera{
     /* background: url("../imagenes/dragon.webp") no-repeat center center; */
+    background: #37488b;
     box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.75);
     color: white;
     font-weight: bold;
@@ -50,7 +51,7 @@ body{
 }
 
 #footer{
-    background: #777;
+    background: #37488b;
     color: white;
     text-align: center;
     padding: 0.5em;
